--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
+layout: base
 ---
 
 <nav>
     {% for page in site.notes %}
     <ul>
-        <li><a href="{{ staff_member.url }}"> {{ page.title }} </a></li>
+        <li><a href="{{ page.url }}"> {{ page.title }} </a></li>
     </ul>
     {% endfor %}
 </nav>
